--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,19 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+//    Something
+    implementation 'androidx.activity:activity-ktx:1.5.1'
+//    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+//    Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+//    Dexter (not Morgan)
+    implementation 'com.karumi:dexter:6.0.2'
 }
