--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-//    Something
+//    Activity and fragment
     implementation 'androidx.activity:activity-ktx:1.5.1'
-//    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
 //    Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
