--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,10 @@ dependencies {
     implementation 'com.karumi:dexter:6.0.2'
 //    LeakCanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
-
+    // Navigation graph
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
+    implementation("androidx.navigation:navigation-compose:2.5.3")
 }
