--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,20 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
+    //Safe args
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
-    namespace 'sdumchykov.task3'
-    compileSdk 32
+    namespace 'sdumchykov.androidApp'
+    compileSdk 33
 
     defaultConfig {
-        applicationId "sdumchykov.task3"
+        applicationId "sdumchykov.androidApp"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -37,9 +41,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1"
 
@@ -48,7 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 //    Activity and fragment
-    implementation 'androidx.activity:activity-ktx:1.5.1'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
 //    Glide
@@ -58,10 +62,18 @@ dependencies {
     implementation 'com.karumi:dexter:6.0.2'
 //    LeakCanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+    //    Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
     // Navigation graph
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
     androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
     implementation("androidx.navigation:navigation-compose:2.5.3")
+}
+
+//Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
