Full working two activities with navigations.

--- a/build.gradle
+++ b/build.gradle
@@ -14,3 +14,7 @@ plugins {
     //Hilt
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
