--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    sourceSets {
+        main {
+            kotlin {
+                srcDirs += 'build/generated/source/navigation-args'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -69,11 +77,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
     // Navigation graph
-    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
-    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
-    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
-    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
-    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation"androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation"androidx.navigation:navigation-ui-ktx:2.5.3"
     //ViewPager2 and Material Design
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.google.android.material:material:1.8.0'
