--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     //ktlint
-    id "org.jlleitschuh.gradle.ktlint" version "11.0.0"
+//    id "org.jlleitschuh.gradle.ktlint" version "11.0.0"
 }
 
 android {
@@ -52,18 +52,18 @@ android {
     }
 }
 
-tasks.getByPath("preBuild").dependsOn("ktlintFormat")
+//tasks.getByPath("preBuild").dependsOn("ktlintFormat")
 
-ktlint {
-    android = true
-    ignoreFailures = false
-    disabledRules = ["max-line-length"]
-    reporters {
-        reporter "plain"
-        reporter "checkstyle"
-        reporter "sarif"
-    }
-}
+//ktlint {
+//    android = true
+//    ignoreFailures = false
+//    disabledRules = ["max-line-length"]
+//    reporters {
+//        reporter "plain"
+//        reporter "checkstyle"
+//        reporter "sarif"
+//    }
+//}
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
