--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_custom2"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Plain">
+        android:theme="@style/Theme.Plain"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".presentation.SignUpActivity"
             android:exported="true">
@@ -23,8 +24,7 @@
         </activity>
         <activity
             android:name=".presentation.MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
