--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,6 @@ plugins {
     //Safe args
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
-    //ktlint
-//    id "org.jlleitschuh.gradle.ktlint" version "11.0.0"
 }
 
 android {
@@ -52,19 +50,6 @@ android {
     }
 }
 
-//tasks.getByPath("preBuild").dependsOn("ktlintFormat")
-
-//ktlint {
-//    android = true
-//    ignoreFailures = false
-//    disabledRules = ["max-line-length"]
-//    reporters {
-//        reporter "plain"
-//        reporter "checkstyle"
-//        reporter "sarif"
-//    }
-//}
-
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -92,7 +77,7 @@ dependencies {
     // Dexter (not Morgan)
     implementation 'com.karumi:dexter:6.0.2'
     // LeakCanary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
