--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
 
-        <activity android:name=".ui.MainActivity" />
+        <activity android:name=".ui.myprofile.MyProfileActivity" />
 
         <activity
-            android:name=".ui.AuthActivity"
+            android:name=".ui.signup.SignUpActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
