--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,16 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.mycontacts.MyContactsActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".ui.myprofile.MyProfileActivity" />
-        <activity
-            android:name=".ui.signup.SignUpActivity"
-            android:exported="false" />
 
     </application>
 
